# jsonlite

./: .clang-format  .gitignore  CMakeLists.txt  JsonLite.podspec  README.md  doxy  jsonlite.h
Examples/Examples.xcodeproj/: project.pbxproj
Examples/Examples.xcworkspace/: contents.xcworkspacedata
Examples/VisualCppJsonLite/: VisualCppJsonLite.sln
Examples/iOS-JSON-Performance/: README.markdown
Examples/iPhoneJsonLite/: sample_json.txt  twitter_public_timeline.json
JsonLite.xcworkspace/: contents.xcworkspacedata
JsonLite.xcworkspace/xcshareddata/: JsonLite.xccheckout
JsonLiteObjC/JsonLiteObjC.xcodeproj/: project.pbxproj
JsonLiteObjC/JsonLiteObjCTests/: JsonLiteObjCAcc.h  JsonLiteObjCBadToken.m  JsonLiteObjCBrokenTokenTests.h  JsonLiteObjCBrokenTokenTests.m  JsonLiteObjCBuilderTests.h  JsonLiteObjCBuilderTests.m  JsonLiteObjCConvertersTests.h  JsonLiteObjCConvertersTests.m  JsonLiteObjCCoverageTests.h  JsonLiteObjCCoverageTests.m  JsonLiteObjCDeserializerTest.h  JsonLiteObjCDeserializerTest.m  JsonLiteObjCInputs.m  JsonLiteObjCPoolTests.h  JsonLiteObjCPoolTests.m  JsonLiteObjCStream.h  JsonLiteObjCTests-Info.plist  JsonLiteObjCTests.h  JsonLiteObjCTests.m  JsonLiteObjCTokenTests.h  JsonLiteObjCTokenTests.m  JsonLiteObjCUnicodeTests.h  JsonLiteObjCUnicodeTests.m  JsonLiteSenTestCaseExt.h  JsonLiteSenTestCaseExt.m
amalgamated/: jsonlite.c  jsonlite.h
amalgamated/all/: jsonlite.c  jsonlite.h
amalgamated/jsonlite/: jsonlite.c  jsonlite.h
amalgamated/mcu/: jsonlite.c  jsonlite.h
doc/html/: annotated.html  classes.html  dir_db0b387de516c8fcf80cfa92a1db9f9b.html  dir_e54f9eb91fde115fe138b3f3df8e83e8.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  jsonlite_8h.html  jsonlite_8h_source.html  jsonlite__builder_8c.html  jsonlite__builder_8h.html  jsonlite__builder_8h_source.html  jsonlite__hash_8c.html  jsonlite__hash_8h.html  jsonlite__hash_8h_source.html  jsonlite__parser_8c.html  jsonlite__parser_8h.html  jsonlite__parser_8h_source.html  jsonlite__token_8c.html  jsonlite__token_8h.html  jsonlite__token_8h_source.html  jsonlite__token__pool_8c.html  jsonlite__token__pool_8h.html  jsonlite__token__pool_8h_source.html  jsonlite__types_8h.html  jsonlite__types_8h_source.html
examples/adder/: main.c
examples/beautifier/: main.c
examples/chunk/: main.c
examples/heap_free/: main.c
examples/stack_usage/: main.c
examples/validator/: main.c
html/: annotated.html  classes.html  dir_db0b387de516c8fcf80cfa92a1db9f9b.html  dir_e54f9eb91fde115fe138b3f3df8e83e8.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  jsonlite_8h.html  jsonlite_8h_source.html  jsonlite__builder_8h.html  jsonlite__builder_8h_source.html  jsonlite__hash_8h.html  jsonlite__hash_8h_source.html  jsonlite__parser_8h.html  jsonlite__parser_8h_source.html  jsonlite__token_8h.html  jsonlite__token_8h_source.html  jsonlite__token__pool_8h.html  jsonlite__token__pool_8h_source.html  jsonlite__types_8h.html  jsonlite__types_8h_source.html
html/search/: all_6a.js  all_6b.js  all_6e.js  all_6f.js  all_73.js  classes_6a.js  defines_6a.js  enums_6a.js  enumvalues_6a.js  files_6a.js  functions_6a.js  pages_6a.js  search.js  typedefs_6a.js  variables_61.js  variables_63.js  variables_65.js  variables_66.js  variables_6a.js
include/: jsonlite.h  jsonlite_buffer.h  jsonlite_buffer_dynamic.h  jsonlite_buffer_static.h  jsonlite_builder.h  jsonlite_mcu.h  jsonlite_parser.h  jsonlite_stack_check.h  jsonlite_stream.h  jsonlite_stream_dynamic.h  jsonlite_stream_file.h  jsonlite_stream_static.h  jsonlite_stream_stdout.h  jsonlite_token.h  jsonlite_token_pool.h  jsonlite_types.h  jsonlite_utf.h  jsonlite_version.h
jsonlite/include/: jsonlite.h  jsonlite_arduino.h  jsonlite_buffer.h  jsonlite_builder.h  jsonlite_config.h  jsonlite_hash.h  jsonlite_parser.h  jsonlite_stream.h  jsonlite_token.h  jsonlite_token_pool.h  (+1 more)
objc/: JsonLiteAccumulator.h  JsonLiteAccumulator.m  JsonLiteCollections.h  JsonLiteCollections.m  JsonLiteConverters.h  JsonLiteConverters.m  JsonLiteDeserializer.h  JsonLiteDeserializer.m  JsonLiteMetaData.h  JsonLiteMetaData.m  JsonLiteObjC.h  JsonLiteObjC.m  JsonLiteOutputStream.h  JsonLiteOutputStream.m  JsonLiteParser.h  JsonLiteParser.m  JsonLiteSerializer.h  JsonLiteSerializer.m
src/: jsonlite.c  jsonlite_buffer.c  jsonlite_buffer_dynamic.c  jsonlite_buffer_static.c  jsonlite_builder.c  jsonlite_parser.c  jsonlite_stack_check.c  jsonlite_stream.c  jsonlite_stream_dynamic.c  jsonlite_stream_file.c  jsonlite_stream_static.c  jsonlite_stream_stdout.c  jsonlite_token.c  jsonlite_token_pool.c
tests/: JsonLiteObjCAcc.h  JsonLiteObjCAcc.m  JsonLiteObjCBadToken.h  JsonLiteObjCBadToken.m  JsonLiteObjCBrokenTokenTests.h  JsonLiteObjCBrokenTokenTests.m  JsonLiteObjCBuilderTests.h  JsonLiteObjCBuilderTests.m  JsonLiteObjCConverters.h  JsonLiteObjCConverters.m  JsonLiteObjCConvertersTests.h  JsonLiteObjCConvertersTests.m  JsonLiteObjCCoverageTests.h  JsonLiteObjCCoverageTests.m  JsonLiteObjCDeserializerTest.h  JsonLiteObjCDeserializerTest.m  JsonLiteObjCInputs.h  JsonLiteObjCInputs.m  JsonLiteObjCOutStream.h  JsonLiteObjCOutStream.m  JsonLiteObjCPoolTests.h  JsonLiteObjCPoolTests.m  JsonLiteObjCStream.h  JsonLiteObjCStream.m  JsonLiteObjCTests-Prefix.pch  JsonLiteObjCTests.h  JsonLiteObjCTests.m  JsonLiteObjCTokenTests.h  JsonLiteObjCTokenTests.m  JsonLiteObjCUnicodeTests.h  JsonLiteObjCUnicodeTests.m  JsonLiteObjcBase64Tests.h  JsonLiteObjcBase64Tests.m  JsonLiteSenTestCaseExt.h  JsonLiteSenTestCaseExt.m  buffer_dynamic.cpp  buffer_static.cpp  builder.cpp  builder_depth.cpp  builder_error_handling.cpp  (+22 more)
tools/: ajl.sh  amalgamate.py  coverage-collect.sh  include.all.json  include.json  include.mcu.json  macos-coverage-collect.sh  setup-gcc-alternatives.sh  src.all.json  src.json  src.mcu.json  src.prologue
(+244 files in other folders)
